tests/baselines/reference/thisInInvalidContextsExternalModule.errors.txt
==== tests/cases/compiler/thisInInvalidContextsExternalModule.ts (11 errors) ====
    //'this' in static member initializer
    class ErrClass1 {
        static t = this; // Error
                   ~~~~
!!! thisInInvalidContextsExternalModule.ts(3,16): error TS2140: 'this' cannot be referenced in static initializers in a class body.
    }
    
    class BaseErrClass {
        constructor(t: any) { }
    }
    
    class ClassWithNoInitializer extends BaseErrClass {
        t;
        //'this' in optional super call
        constructor() {
            super(this); // OK
        }
    }
    
    class ClassWithInitializer extends BaseErrClass {
        t = 4;
        //'this' in required super call
        constructor() {
            super(this); // Error
                  ~~~~
!!! thisInInvalidContextsExternalModule.ts(22,15): error TS2097: 'this' cannot be referenced in current location.
        }
    }
    
    module M {
        //'this' in module variable
        var x = this; // Error
                ~~~~
!!! thisInInvalidContextsExternalModule.ts(28,13): error TS2108: 'this' cannot be referenced within module bodies.
    }
    
    //'this' as type parameter constraint
    // function fn<T extends this >() { } // Error
    
    //'this' as a type argument
    function genericFunc<T>(x: T) { }
    genericFunc<this>(undefined);  // Should be an error
                ~~~~
!!! thisInInvalidContextsExternalModule.ts(36,13): error TS2108: 'this' cannot be referenced within module bodies.
    
    class ErrClass3 extends this {
                            ~~~~
!!! thisInInvalidContextsExternalModule.ts(38,25): error TS1008: Unexpected token; 'type name' expected.
                                 ~
!!! thisInInvalidContextsExternalModule.ts(38,30): error TS1005: ';' expected.
                            ~~~~
!!! thisInInvalidContextsExternalModule.ts(38,25): error TS2108: 'this' cannot be referenced within module bodies.
    
    }
    
    //'this' as a computed enum value
    enum SomeEnum {
        A = this, // Should not be allowed
            ~~~~
!!! thisInInvalidContextsExternalModule.ts(44,9): error TS2097: 'this' cannot be referenced in current location.
        B = this.spaaaace // Also should not be allowed
            ~~~~
!!! thisInInvalidContextsExternalModule.ts(45,9): error TS2097: 'this' cannot be referenced in current location.
    }
    
    export = this; // Should be an error
             ~~~~
!!! thisInInvalidContextsExternalModule.ts(48,10): error TS1006: Identifier expected; 'this' is a keyword.
             ~~~~
!!! thisInInvalidContextsExternalModule.ts(48,10): error TS2108: 'this' cannot be referenced within module bodies.